fixed padding in search-section-document type bars and made accordion button icon smaller

--- a/wwwroot/css/AdminPage.css
+++ b/wwwroot/css/AdminPage.css
@@ -326,9 +326,9 @@ body {
 
 /* Add our custom SVG accordion arrow */
 .accordion-button::before {
-  background-image: url("../svgs/admin/accordion-arrow.svg");
+  background-image: url(../svgs/admin/accordion-arrow.svg);
   background-repeat: no-repeat;
-  background-size: 30px 15px;
+  background-size: 20px 10px;
   background-position: center;
   content: "";
   width: 30px;
@@ -340,7 +340,7 @@ body {
   margin-right: 15px;
   flex-shrink: 0;
   display: block;
-  order: 999; /* Ensure it appears at the end */
+  order: 999;
 }
 
 .accordion-button:not(.collapsed)::before {
@@ -415,11 +415,10 @@ body {
 }
 
 .delete-btn-container {
-  justify-self: center;
+  justify-self: left;
   width: 60px;
   height: 60px;
   background-color: #2f3e5f;
-  display: flex;
   align-items: center;
   justify-content: center;
   padding: 0 8px;
@@ -427,8 +426,7 @@ body {
   box-shadow: 0 4px 12px rgba(13, 10, 44, 0.06), 0 0 15px rgba(151, 0, 0, 0.6);
   border-radius: 32px;
   flex-shrink: 1;
-  margin-bottom: 10px;
-  margin-left: auto !important;
+  margin-bottom: 9px;
   transition: box-shadow 0.3s ease;
 }
 
@@ -488,20 +486,16 @@ body {
   flex-shrink: 1; /* Allow it to shrink */
   margin-bottom: 9px;
   border: 1px solid transparent; /* baseline border */
-  transition: border .2s ease, box-shadow .2s ease;
+  transition: border 0.2s ease, box-shadow 0.2s ease;
+}
+.padding-between-search-filter {
+  padding: 0px 7px;
 }
 
 .search-container:focus-within {
   outline: none;
   border: 1px solid #409cff; /* this Customizes hover border color */
   box-shadow: 0 0 0 2px rgba(64, 156, 255, 0.4); /* Optional glow */
-}
-
-#section-search {
-  margin-left: 10px !important;
-}
-#document-search {
-  margin-left: 20px !important;
 }
 
 #section-document-search-2 {
